fixed header spacing

--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,9 @@
 
 html,
 body {
-    /* scroll-behavior: smooth; */
+     /*scroll-behavior: smooth; */
     height: 100%;
+    /*transition: 0.5s;*/
 }
 
 .h1,
@@ -258,7 +259,7 @@ header .btn-group {
 
 #theme-toggle {
     position: relative;
-    /*right: 10vw;*/
+    transition: 0.5s;
     width: 5.3vw;
     border-radius: 160px;
     background: var(--background-secondary);
@@ -279,10 +280,10 @@ header .btn-group {
     box-shadow: 0 0.1em 1em rgba(0, 0, 0, 0.05),
         inset 0 0.15em 0.15em rgba(255, 255, 255, 1),
         inset 0 -0.15em 0.15em rgba(255, 255, 255, 1);
-    transition: 0.5s;
+
 }
 
-#theme-toggle.active {
+.dark-theme #theme-toggle {
     position: relative;
     /*right: 10vw;*/
     width: 5.3vw;
@@ -293,7 +294,7 @@ header .btn-group {
         inset 0 -0.1em 0.8em rgba(0, 0, 0, 0.1);
 }
 
-#theme-toggle.active i {
+.dark-theme #theme-toggle i {
     position: relative;
     top: 0;
     left: 1.75em;
@@ -304,8 +305,6 @@ header .btn-group {
     box-shadow: 0 0.1em 1.2em rgba(0, 0, 0, 0.5),
         inset 0 0.1em 1em rgba(255, 255, 255, 0.2),
         inset 0 -0.1em 0.8em rgba(255, 255, 255, 0.2);
-    transition: 0.5s;
-    /* left: 2em; */
     cursor: pointer;
 }
 
@@ -1078,14 +1077,15 @@ input:checked + .slider:before {
         display: none;
     }
 
-    header .navbar {
-        display: flex;
-        gap: 30px;
+    .header .mobile-nav {
+        display: none;
     }
+
     .desktop-nav {
         display:     flex;
         align-items: center;
         gap: 30px;
-        /*width: 50%;*/
+        width: 100%;
+        justify-content: space-between;
     }
 }
